--- a/www/bower.json
+++ b/www/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "angular": "~1.4.8",
     "angular-ui-router": "~0.2.15",
-    "icomoon-bower": "icomoon#~0.1.0"
+    "icomoon-bower": "icomoon#~0.1.0",
+    "vex": "~2.3.3"
   }
 }
